bug on preemption and allocation